src/runtime/runtime.h

double   rt_math_pow(double base, double exponent);
/* Core-C-only lane twins of Rust-runtime-only kernels (runtime_native.c; see
 * the block beside rt_array_pop and doc/08_tracking/bug/
 * core_c_bootstrap_runtime_lane_missing_rt_utf8_math_array_symbols_2026-09-13.md).
 * The byte arguments are tagged RuntimeValues, not pointers. */
double   rt_math_sqrt(double x);
double   rt_math_exp(double x);
double   rt_math_cbrt(double x);
double   rt_math_sin(double x);
double   rt_math_cos(double x);
double   rt_math_tan(double x);
double   rt_math_hypot(double x, double y);
double   rt_math_fma(double x, double y, double z);
/* IEEE-754 minNum/maxNum (fmin/fmax), matching Rust f64::min / f64::max. */
double   rt_math_min(double a, double b);
double   rt_math_max(double a, double b);
bool        rt_math_is_nan(double value);
bool        rt_math_is_inf(double value);
bool        rt_math_is_finite(double value);